--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,12 +1,13 @@
 {% extends "admin/base_site.html" %}
 {% load static %}
-{% block title %}E-Commernce{% endblock %}
+
+{% block title %}E-Commerce{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">E-Commernce</h1>
+<h1 id="site-name">E-Commerce</h1>
 {% endblock %}
 
 {% block extrahead %}
-{{ block.super }}
-<link rel="stylesheet" type="text/css" href="{% static 'admin/css/custom.css' %}">
+    {{ block.super }}
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/custom.css' %}">
 {% endblock %}
